# SupportSDK

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  SupportSDK.props  env.cmd
Samples/PerformanceTests/PerformanceTests/: CMakeLists.txt  CommandBucketTests.h  FSM_Test_HierarchicalvsTemplate.cpp  FSM_Test_HierarchicalvsTemplate.h  FactoryTests.cpp  FactoryTests.h  GlobalObjcetGetterTests.cpp  MessageDispatcherTests.cpp  MessageDispatcherTests.h  PerformanceTests.cpp  PerformanceTests.vcxproj  PerformanceTests.vcxproj.filters  ReadMe.txt  StateMachineTests.cpp  StateMachineTests.h  TempTests.cpp  TempTests.h  commandBucketTests.cpp  stdafx.cpp  stdafx.h
Sources/: CMakeLists.txt
Sources/DecisionMaking/: CMakeLists.txt  DecisionMaking.vcxproj.filters  Exceptions.h  _Link.h
Sources/DecisionMaking/DecisionMaking.Tests/: DecisionMaking.Tests.vcxproj  DecisionMaking.Tests.vcxproj.filters  DecisionTreeTests.cpp  stdafx.cpp  stdafx.h
Sources/DecisionMaking/DecisionTrees/: Decision.h  DecisionTree.cpp  DecisionTreeNode.h
Sources/ExecutionManagement/: CMakeLists.txt  ExecutionManagement.vcxproj  FrequencySheduler.h  ISheduler.h  LoadBalancingSheduler.cpp  LoadBalancingSheduler.h  PrioritySheduler.cpp  ScopeSheduledAction.cpp  _Link.h  stdafx.h
Sources/ExecutionManagement/ExecutionManagement.Tests/: BaseMocks.h  ExecutionManagement.Tests.vcxproj  ScopeSheduledActionTests.cpp  _LinkingLibraries.cpp  stdafx.h
Sources/GameCore/: BaseTypesHashes.h  CMakeLists.txt  Core.cpp  Core.h  CoreDelegate.h  DefaultGlobalObjectGetter.h  DefaultObjectsRegistrar.cpp  DefaultObjectsStorage.cpp  DefaultObjectsStorage.h  Entity.h  EntityDefines.h  EntityManager.cpp  EntityManager.h  GameContext.cpp  GameContext.h  GameCore.vcxproj  GameCore.vcxproj.filters  GameInfo.h  GameObject.cpp  GameObject.h  GenericHandlesStaticArray.h  GlobalObjectBase.h  IComponent.h  IController.h  ObjectStorageBase.h  ObjectSubset.h  Options.h  Platform.h  PropertyElement.h  PropertyReaders.cpp  System.h  TimeController.cpp  Timer.cpp  Timer.h  World.cpp  World.h
Sources/GameCore/Applications/: ApplicationBase.cpp  ApplicationBase.h  Application_Windows.cpp  Application_Windows.h
Sources/GameCore/Composer/: IComponentSerializer.h  IObjectComposer.h  ObjectSettings.cpp  ObjectSettings.h
Sources/GameCore/FileSystem/: FileStream.h  FileSystem.h  Stream.h
Sources/GameCore/Input/: InputEvent.h  InputSubscriber.h  InputSystem.cpp  InputSystem.h  Keyboard.cpp  Keyboard.h
Sources/GameCore/Logging/: BasicPolicies.cpp  BasicPolicies.h  LogSystem.cpp  LogSystem.h  Logger.h  LoggingDefinitions.h
Sources/GameCore/Render/: Camera.cpp  Camera.h  CommandBucket.h  CommandPacket.h  Commands.cpp  Commands.h  HardwareBuffer.h  HardwareBufferManagerBase.h  HardwareIndexBuffer.h  HardwareVertexBuffer.h  IRenderer.h  Light.h  Material.h  MaterialManager.cpp  MaterialManager.h  MeshComponent.h  MeshSystem.cpp  MeshSystem.h  RenderLogPolicies.h  RenderTypes.h  RenderWorld.cpp  RenderWorld.h  ScopedLightSwitch.h  ScopedMatrixTransformation.h  Shader.cpp  Shader.h  ShaderDefinitions.h  ShaderSystem.cpp  ShaderSystem.h  Texture.h  TextureAtlas.cpp  TextureAtlas.h  TextureDefinitions.h  TextureManager.h  Viewport.h
Sources/GameCore/Resources/: LoadersRegistrar.cpp  ResourceInformation.h  ResourceManager.h
Sources/GameCore/Systems/: TransformationsSystem.cpp  TransformationsSystem.h
Sources/GameCore/UI/: UIButton.cpp  UIButton.h  UIControl.cpp  UIControl.h  UIControlSystem.cpp  UIControlSystem.h  UIRegistrar.cpp  UIScreen.cpp  UIScreen.h  UITypes.h
Sources/Graphs/: CMakeLists.txt  Connection.h  Graph.cpp  PathfindingList.h  _Link.h
Sources/Graphs/Graphs.Tests/: Graph.Tests.vcxproj.filters  GraphTests.cpp  PatFindingListTests.cpp  stdafx.cpp  stdafx.h
Sources/Math/: CMakeLists.txt  Math.vcxproj  Matrix.h  Matrix4.h  Plane.h  Quaternion.h  Ray.h  Rectangle.h  Utilities.h  Vector.h  VectorImpl.h  VectorUtilities.h  stdafx.h
Sources/Math/Math.Tests/: Math.Tests.vcxproj.filters  VectorTests.cpp
Sources/Network/: Address.cpp  Address.h  CMakeLists.txt  Connection.h  DefaultNetworkController.cpp  INetworkController.h  ISocket.h  Net.h  Network.vcxproj  PacketProvider.cpp  PacketType.h  SocketImp.cpp  Utilities.h  _Link.h
Sources/Patterns/: CMakeLists.txt  Event.h  Singleton.h  _Link.h  stdafx.cpp  stdafx.h
Sources/Patterns/Factory/: Factory.h
Sources/Patterns/MessageDispatcher/: MemberFunctionHandler.h  MessageDispatcher.h  connection.h
Sources/Patterns/StateMachine/: BaseState.h  Transitions.h  executor.h  statemachine.h
Sources/Terrain/: CMakeLists.txt  Terrain.vcxproj.filters  TerrainAPI.h  TerrainTile.cpp  TerrainTile.h  TypeDefines.h  stdafx.h
Sources/Terrain/Terrain.Tests/: Terrain.Tests.vcxproj  _LinkinLibraries.cpp
Sources/Utilities/: CMakeLists.txt  ConversionUtilities.cpp  HashFunctions.cpp  StringUtilities.h  TemplateChecks.h  TimeUtilities.cpp  TimeUtilities.h  TypeDefines.h  Utilities.vcxproj  XmlUtilities.cpp  XmlUtilities.h  customscopedobject.h  lexical_cast.h  noncopyable.h  stdafx.h  type_index.h
Sources/Utilities/tinyxml/: tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp
Sources/WorldInterfacing/: CMakeLists.txt  Event.cpp  EventListener.cpp  EventListener.h  EventListenerBroadCasting.cpp  EventListenerNarrowCasting.h  PollingStation.h  PollingTask.h  WorldInterfacing.vcxproj  WorldInterfacing.vcxproj.filters  WorldInterfacingAPI.h  stdafx.h
Sources/WorldInterfacing/WorldInterfacing.Tests/: EventListenerBroadCastingTests.cpp  EventListenerNarrowCastingTests.cpp  EventManagerBaseMocks.h  EventManagerTests.cpp  EventTests.cpp  PollingStationTests.cpp  PollingTaskTests.cpp  WorldInterfacing.Tests.vcxproj  (+1 more)
SupportSDK/Utilities/: CMakeLists.txt  ConstString.h  ConversionUtilities.cpp  ConversionsUtilities.h  HashFunctions.h  StringUtilities.cpp  StringUtilities.h  TimeUtilities.cpp  TypeDefines.h  Utilities.vcxproj  Utilities.vcxproj.filters  UtilitiesAPI.h  XmlUtilities.cpp  XmlUtilities.h  _Link.h  any.h  lexical_cast.h  stdafx.h
(+405 files in other folders)
