file(GLOB HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
file(GLOB SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

file(GLOB DTREES_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/DecisionTrees/*.h")
file(GLOB DTREES_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/DecisionTrees/*.cpp")

add_library(DecisionMaking ${HEADER_FILES} ${SOURCE_FILES} ${DTREES_HEADER_FILES} ${DTREES_SOURCE_FILES})
target_include_directories(DecisionMaking PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/..)