file(GLOB HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
file(GLOB SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

file(GLOB APP_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Applications*.h")
file(GLOB APP_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Applications/*.cpp")

file(GLOB COMPOSER_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Composer/*.h")
file(GLOB COMPOSER_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Composer/*.cpp")

file(GLOB FILESYSTEM_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/FileSystem/*.h")
file(GLOB FILESYSTEM_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/FileSystem/*.cpp")

file(GLOB INPUT_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Input/*.h")
file(GLOB INPUT_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Input/*.cpp")

file(GLOB LOGGING_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Logging/*.h")
file(GLOB LOGGING_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Logging/*.cpp")

file(GLOB RENDER_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Render/*.h")
file(GLOB RENDER_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Render/*.cpp")

file(GLOB RENDER_FONTS_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Render/Fonts/*.h")
file(GLOB RENDER_FONTS_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Render/Fonts/*.cpp")

file(GLOB RENDER_GL_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Render/OpenGL/*.h")
file(GLOB RENDER_GL_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Render/OpenGL/*.cpp")

file(GLOB RESOURCES_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Resources/*.h")
file(GLOB RESOURCES_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Resources/*.cpp")

file(GLOB SYSTEMS_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Systems/*.h")
file(GLOB SYSTEMS_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Systems/*.cpp")

file(GLOB UI_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/UI/*.h")
file(GLOB UI_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/UI/*.cpp")

add_library(GameCore SHARED ${HEADER_FILES} ${SOURCE_FILES}
							${APP_HEADER_FILES} ${APP_SOURCE_FILES}
							${COMPOSER_HEADER_FILES} ${COMPOSER_SOURCE_FILES}
							${FILESYSTEM_HEADER_FILES} ${FILESYSTEM_SOURCE_FILES}
							${INPUT_HEADER_FILES} ${INPUT_SOURCE_FILES}
                            ${LOGGING_HEADER_FILES} ${LOGGING_SOURCE_FILES}
							${RENDER_HEADER_FILES} ${RENDER_SOURCE_FILES}
                            ${RENDER_FONTS_HEADER_FILES} ${RENDER_FONTS_SOURCE_FILES}
							${RENDER_GL_HEADER_FILES} ${RENDER_GL_SOURCE_FILES}
                            ${RESOURCES_HEADER_FILES} ${RESOURCES_SOURCE_FILES}
                            ${SYSTEMS_HEADER_FILES} ${SYSTEMS_SOURCE_FILES}
                            ${UI_HEADER_FILES} ${UI_SOURCE_FILES}
	)
target_include_directories(GameCore PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/.. ${TINYXML_INCLUDE_DIR} ${GLEW_INCLUDE_DIR} ${ASSIMP_INCLUDE_DIR} ${SOIL_INCLUDE_DIR} ${FREETYPE_INCLUDE_DIR}/freetype2)    
target_link_libraries(GameCore Utilities ${SOIL_LIB_DIR}/SOIL.lib ${TINYXML_LIB_DIR}/tinyxml2.lib opengl32.lib glu32.lib ${GLEW_LIB_DIR}/libglew_sharedd.lib ${ASSIMP_LIB_DIR}/assimp-vc140-mt.lib ${FREETYPE_LIB_DIR}/freetyped.lib)
